Adding “an” in tag <p>

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div id="boxSuprema">
             <div id="containerAvatar"><img id="avatar" src="assets/gabry.png" /></div>
             <div id="boxText">
-                <div id="parId">🇮🇹 I'm Italian Guy of <span>~</span> who wants to <strong>make the difference</strong></div>
+                <div id="parId">🇮🇹 I'm an Italian Guy of <span>~</span> who wants to <strong>make the difference</strong></div>
                 <a href="https://discord.com/users/683423964227436576" target="_blank"><div class="btn"><i class="fa-brands fa-discord"></i>Discord</div></a>
                 <a href="https://github.com/Gabry-76" target="_blank"><div class="btn" id="central"><i class="fa-brands fa-github"></i>GitHub</div></a>
                 <a href="https://open.spotify.com/user/kj24hew96b1iesnldgn4j3a2e" target="_blank"><div class="btn"><i class="fa-brands fa-spotify"></i>Spotify</div></a>
