Adding Loader Spinner and Easter Egg Improves

--- a/index.html
+++ b/index.html
@@ -3,18 +3,22 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Gabry_76#0039</title>
+        <title>NotGabry#0039</title>
         <link rel="stylesheet" href="styles.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="shortcut icon" href="./assets/gabry-icon.png">
-        <meta property="og:title" content="Gabry Portfolio">
-        <meta property="theme-color" content="AFBEFA">
-        <meta property="og:description" content="Check Here Some Of My Info">
+        <meta property="og:title" content="NotGabry">
+        <meta property="og:image" content="./assets/gabry-icon.png">
+        <meta property="og:description" content="My Beautiful WebSite">
+        <meta property="theme-color" content="#AFBEFA">
         <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
         <div id="bgAll"></div>
+        <div id="boxLoading">
+            <span class="loader"></span>
+        </div>
         <div id="boxSuprema">
             <div id="containerAvatar"><img id="avatar" src="assets/gabry.png" /></div>
             <div id="boxText">
@@ -26,6 +30,7 @@
             </div>
         </div>
     </body>
+    <script src="scripts/load.js"></script>
     <script src="scripts/easteregg.js"></script>
     <script src="scripts/script.js"></script>
     <script src="https://kit.fontawesome.com/cbb26e12b7.js" crossorigin="anonymous"></script>
