Changing Embed Icon

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="shortcut icon" href="./assets/gabry-icon.png">
         <meta property="og:title" content="NotGabry">
-        <meta property="og:image" content="./assets/gabry-icon.png">
+        <meta property="og:image" content="https://i.imgur.com/TqLZrDp.png">
         <meta property="og:description" content="My Beautiful WebSite">
         <meta property="theme-color" content="#AFBEFA">
         <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
