--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>NotGabry#0039</title>
+        <title>NotGabry#1111</title>
         <link rel="stylesheet" href="styles.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="shortcut icon" href="./assets/gabry-icon.png">
@@ -24,7 +24,7 @@
             <div id="boxText">
                 <div id="parId"><span id="italianFlag">🇮🇹</span> I'm Gabry, an <strong>Italian Guy</strong> of <span id="age">~</span> who wants to <strong>make the difference</strong></div>
                 <a href="https://discord.com/users/683423964227436576" target="_blank"><div class="btn"><i class="fa-brands fa-discord"></i>Discord</div></a>
-                <a href="https://github.com/Gabry-76" target="_blank"><div class="btn" id="central"><i class="fa-brands fa-github"></i>GitHub</div></a>
+                <a href="https://github.com/NotGabry" target="_blank"><div class="btn" id="central"><i class="fa-brands fa-github"></i>GitHub</div></a>
                 <a href="https://open.spotify.com/user/kj24hew96b1iesnldgn4j3a2e" target="_blank"><div class="btn"><i class="fa-brands fa-spotify"></i>Spotify</div></a>
                 <a href="https://twitter.com/not_gabry" target="_blank"><div class="btn"><i class="fa-brands fa-twitter"></i>Twitter</div></a>
             </div>
