feat: Change Old Dir Path

--- a/index.html
+++ b/index.html
@@ -4,21 +4,17 @@
     <head>
         <meta charset="utf-8">
         <title>NotGabry#3115</title>
-        <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="./Public/CSS/styles.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="shortcut icon" href="./assets/gabry-icon.png">
+        <link rel="shortcut icon" href="./Public/Assets/gabry-icon.png">
         <meta property="og:title" content="NotGabry">
         <meta property="og:image" content="https://i.imgur.com/TqLZrDp.png">
-        <meta property="og:description" content="My Beautiful WebSite">
+        <meta property="og:description" content="Nothing to say about my website, just open it if you want.">
         <meta property="theme-color" content="#AFBEFA">
-        <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
         <div id="bgAll"></div>
-        <div id="boxLoading">
-            <span class="loader"></span>
-        </div>
         <div id="boxSuprema">
             <div id="containerAvatar"><img id="avatar" src="assets/gabry.png" /></div>
             <div id="boxText">
@@ -30,8 +26,8 @@
             </div>
         </div>
     </body>
-    <script src="scripts/load.js"></script>
-    <script src="scripts/easteregg.js"></script>
-    <script src="scripts/script.js"></script>
+    <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
+    <script src="./Public/JS/easteregg.js"></script>
+    <script src="./Public/JS/script.js"></script>
     <script src="https://kit.fontawesome.com/cbb26e12b7.js" crossorigin="anonymous"></script>
 </html>
