--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
         <div id="bgAll"></div>
         <div id="boxSuprema">
-            <div id="containerAvatar"><img id="avatar" src="assets/gabry.png" /></div>
+            <div id="containerAvatar"><img id="avatar" src="./Public/Assets/gabry.png" /></div>
             <div id="boxText">
                 <div id="parId"><span id="italianFlag">🇮🇹</span> I'm Gabry, an <strong>Italian Guy</strong> of <span id="age">~</span> who wants to <strong>make the difference</strong></div>
                 <a href="https://discord.com/users/683423964227436576" target="_blank"><div class="btn"><i class="fa-brands fa-discord"></i>Discord</div></a>
