--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta property="og:title" content="NotGabry">
         <meta property="og:image" content="https://i.imgur.com/TqLZrDp.png">
         <meta property="og:description" content="Nothing to say about my website, just open it if you want.">
-        <meta property="theme-color" content="#AFBEFA">
+        <meta property="theme-color" content="#222138">
     </head>
 
     <body>
