--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="shortcut icon" href="./Public/Assets/gabry-icon.png">
         <meta property="og:title" content="NotGabry">
-        <meta property="og:image" content="https://i.imgur.com/TqLZrDp.png">
+        <meta property="og:image" content="https://i.postimg.cc/JnwnKW67/90823c06c9756ee013ee60fc96613e00-modified.png">
         <meta property="og:description" content="Nothing to say about my website, just open it if you want.">
         <meta property="theme-color" content="#222138">
     </head>
