--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta property="og:title" content="NotGabry">
         <meta property="og:image" content="https://i.postimg.cc/JnwnKW67/90823c06c9756ee013ee60fc96613e00-modified.png">
         <meta property="og:description" content="Nothing to say about my website, just open it if you want.">
-        <meta property="theme-color" content="#222138">
+        <meta property="theme-color" content="#A9A7F1">
     </head>
 
     <body>
