--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div id="boxSuprema">
             <div id="containerAvatar"><img id="avatar" src="./Public/Assets/gabry.png" /></div>
             <div id="boxText">
-                <div id="parId"><span id="italianFlag">🇮🇹</span> I'm Gabry, an <strong>Italian Guy</strong> of <span id="age">~</span> who wants to <strong>make the difference</strong></div>
+                <div id="parId"><span id="italianFlag">🇮🇹</span> I'm Gabry<span id="comma">,</span> an <strong>Italian Guy</strong> of <span id="age">~</span> who wants to <strong>make the difference</strong></div>
                 <a href="https://discord.com/users/683423964227436576" target="_blank"><div class="btn"><i class="fa-brands fa-discord"></i>Discord</div></a>
                 <a href="https://github.com/NotGabry" target="_blank"><div class="btn" id="central"><i class="fa-brands fa-github"></i>GitHub</div></a>
                 <a href="https://open.spotify.com/user/kj24hew96b1iesnldgn4j3a2e" target="_blank"><div class="btn"><i class="fa-brands fa-spotify"></i>Spotify</div></a>
@@ -27,7 +27,11 @@
         </div>
     </body>
     <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
-    <script src="./Public/JS/easteregg.js"></script>
-    <script src="./Public/JS/script.js"></script>
     <script src="https://kit.fontawesome.com/cbb26e12b7.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+    <script src="./Public/JS/rick.js"></script>
+    <script src="./Public/JS/script.js"></script>
+    <script src="./Public/JS/comma.js"></script>
+    <script src="./Public/JS/age.js"></script>
+    <script src="./Public/JS/birthday.js"></script>
 </html>
