feat: Adding Font Change

--- a/index.html
+++ b/index.html
@@ -34,4 +34,5 @@
     <script src="./Public/JS/comma.js"></script>
     <script src="./Public/JS/age.js"></script>
     <script src="./Public/JS/birthday.js"></script>
+    <script src="./Public/JS/font.js"></script>
 </html>
