--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>NotGabry#3115</title>
@@ -15,6 +14,8 @@
 
     <body>
         <div id="bgAll"></div>
+        <div id="linearColor"></div>
+        <div id="snowflakes" aria-hidden="true"></div>
         <div id="boxSuprema">
             <div id="containerAvatar"><img id="avatar" src="./Public/Assets/gabry.png" /></div>
             <div id="boxText">
@@ -30,9 +31,9 @@
     <script src="https://kit.fontawesome.com/cbb26e12b7.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
     <script src="./Public/JS/rick.js"></script>
+    <script src="./Public/JS/snow.js"></script>
     <script src="./Public/JS/script.js"></script>
     <script src="./Public/JS/comma.js"></script>
     <script src="./Public/JS/age.js"></script>
     <script src="./Public/JS/birthday.js"></script>
-    <script src="./Public/JS/font.js"></script>
 </html>
