feat: add custom url

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <div id="containerAvatar"><img id="avatar" src="./Public/Assets/gabry.png" /></div>
             <div id="boxText">
                 <div id="parId"><span id="italianFlag">🇮🇹</span> I'm Gabry<span id="comma">,</span> an <strong>Italian Guy</strong> of <span id="age">~</span> who wants to <strong>make the difference</strong></div>
-                <a href="https://discord.com/users/683423964227436576" target="_blank"><div class="btn"><i class="fa-brands fa-discord"></i>Discord</div></a>
-                <a href="https://github.com/NotGabry" target="_blank"><div class="btn" id="central"><i class="fa-brands fa-github"></i>GitHub</div></a>
-                <a href="https://open.spotify.com/user/kj24hew96b1iesnldgn4j3a2e" target="_blank"><div class="btn"><i class="fa-brands fa-spotify"></i>Spotify</div></a>
-                <a href="https://twitter.com/not_gabry" target="_blank"><div class="btn"><i class="fa-brands fa-twitter"></i>Twitter</div></a>
+                <a href="https://i.gabry.ga/discord" target="_blank"><div class="btn"><i class="fa-brands fa-discord"></i>Discord</div></a>
+                <a href="https://i.gabry.ga/github" target="_blank"><div class="btn" id="central"><i class="fa-brands fa-github"></i>GitHub</div></a>
+                <a href="https://i.gabry.ga/spotify" target="_blank"><div class="btn"><i class="fa-brands fa-spotify"></i>Spotify</div></a>
+                <a href="https://i.gabry.ga/twitter" target="_blank"><div class="btn"><i class="fa-brands fa-twitter"></i>Twitter</div></a>
             </div>
         </div>
     </body>
