--- a/404.html
+++ b/404.html
@@ -3,6 +3,15 @@
     <head>
         <title>NotGabry#3115</title>
         <link rel="shortcut icon" href="./Public/Assets/gabry-icon.png">
-        <meta http-equiv="refresh" content="0; URL=/" >
+        <meta http-equiv="refresh" content="5; URL=/" >
+        <link rel="stylesheet" href="/Public/CSS/404.css">
     </head>
+
+    <body>
+        <div id="bgAll"></div>
+        <div id="container">
+            <h1>404</h1>
+            <h3><strong>Page not found</strong></h3>
+        </div>
+    </body>
 </html>
