feat: Small Changes

--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
     <head>
         <meta charset="utf-8">
         <title>NotGabry#3115</title>
-        <link rel="stylesheet" href="./Public/CSS/styles.css" />
+        <link rel="stylesheet" href="/Public/CSS/styles.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="shortcut icon" href="./Public/Assets/gabry-icon.png">
+        <link rel="icon" href="/Public/Assets/gabry-icon.png">
+        <link rel="shortcut icon" href="/Public/Assets/gabry-icon.png">
+
         <meta property="og:title" content="NotGabry">
-        <meta property="og:image" content="https://i.postimg.cc/JnwnKW67/90823c06c9756ee013ee60fc96613e00-modified.png">
         <meta property="og:description" content="Nothing to say about my website, just open it if you want.">
         <meta property="theme-color" content="#A9A7F1">
+
+        <meta property="og:image" content="/Public/Assets/screenshot.png">
+        <meta property="og:image:width" content="960">
+        <meta property="og:image:height" content="540">
+        <meta property="og:image:type" content="image/png">
+        <meta name="twitter:card" content="summary_large_image">
     </head>
 
     <body>
@@ -27,6 +34,7 @@
             </div>
         </div>
     </body>
+    
     <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/cbb26e12b7.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
