feat: Changes To Font

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
         <title>NotGabry#3115</title>
         <link rel="stylesheet" href="/Public/CSS/styles.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="icon" href="/Public/Assets/gabry-icon.png">
-        <link rel="shortcut icon" href="/Public/Assets/gabry-icon.png">
+        <link rel="icon" href="/Public/Assets/Images/gabry-icon.png">
+        <link rel="shortcut icon" href="/Public/Assets/Images/gabry-icon.png">
 
         <meta property="og:title" content="NotGabry">
         <meta property="og:description" content="Nothing to say about my website, just open it if you want.">
         <meta property="theme-color" content="#A9A7F1">
 
-        <meta property="og:image" content="/Public/Assets/screenshot.png">
+        <meta property="og:image" content="/Public/Assets/Images/screenshot.png">
         <meta property="og:image:width" content="960">
         <meta property="og:image:height" content="540">
         <meta property="og:image:type" content="image/png">
@@ -24,7 +24,7 @@
         <div id="linearColor"></div>
         <div id="snowflakes" aria-hidden="true"></div>
         <div id="boxSuprema">
-            <div id="containerAvatar"><img id="avatar" src="./Public/Assets/gabry.png" /></div>
+            <div id="containerAvatar"><img id="avatar" src="/Public/Assets/Images/gabry.png" /></div>
             <div id="boxText">
                 <div id="parId"><span id="italianFlag">🇮🇹</span> I'm Gabry, an <strong>Italian Guy</strong> of <span id="age">~</span> who wants to <strong>make the difference</strong></div>
                 <a href="https://i.gabry.ga/discord" target="_blank"><div class="btn"><i class="fa-brands fa-discord"></i></div></a>
