--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         </div>
     </body>
     
-    <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/cbb26e12b7.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/twemoji@14.0.2/dist/twemoji.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+    <script src="https://kit.fontawesome.com/cbb26e12b7.js" crossorigin="anonymous"></script>
     <script src="./Public/JS/script.js"></script>
     <script src="./Public/JS/birthday.js"></script>
 </html>
