--- a/index.html
+++ b/index.html
@@ -1,43 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>NotGabry#3115</title>
-        <link rel="stylesheet" href="/Public/CSS/styles.css" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="icon" href="/Public/Assets/Images/gabry-icon.png">
-        <link rel="shortcut icon" href="/Public/Assets/Images/gabry-icon.png">
 
-        <meta property="og:title" content="NotGabry">
-        <meta property="og:description" content="Nothing to say about my website, just open it if you want.">
-        <meta property="theme-color" content="#A9A7F1">
+<head>
+    <meta charset="utf-8">
+    <title>@NotGabry</title>
+    <link rel="stylesheet" href="/Public/CSS/styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="/Public/Assets/Images/gabry-icon.png">
+    <link rel="shortcut icon" href="/Public/Assets/Images/gabry-icon.png">
 
-        <meta property="og:image" content="/Public/Assets/Images/screenshot.png">
-        <meta property="og:image:width" content="960">
-        <meta property="og:image:height" content="540">
-        <meta property="og:image:type" content="image/png">
-        <meta name="twitter:card" content="summary_large_image">
-    </head>
+    <meta property="og:title" content="NotGabry">
+    <meta property="og:description" content="Minimalist">
+    <meta property="theme-color" content="#A9A7F1">
 
-    <body>
-        <div id="bgAll"></div>
-        <div id="linearColor"></div>
-        <div id="snowflakes" aria-hidden="true"></div>
-        <div id="boxSuprema">
-            <div id="containerAvatar"><img id="avatar" src="/Public/Assets/Images/gabry.png" /></div>
-            <div id="boxText">
-                <div id="parId"><span id="italianFlag">🇮🇹</span> I'm Gabry, an <strong>Italian Guy</strong> of <span id="age">~</span> who wants to <strong>make the difference</strong></div>
-                <a href="https://i.gabry.ga/discord" target="_blank"><div class="btn"><i class="fa-brands fa-discord"></i></div></a>
-                <a href="https://i.gabry.ga/github" target="_blank"><div class="btn"><i class="fa-brands fa-github"></i></div></a>
-                <a href="https://i.gabry.ga/spotify" target="_blank"><div class="btn"><i class="fa-brands fa-spotify"></i></div></a>
-                <a href="https://i.gabry.ga/twitter" target="_blank" id="last"><div class="btn"><i class="fa-brands fa-twitter"></i></div></a>
-            </div>
-        </div>
-    </body>
-    
-    <script src="https://unpkg.com/twemoji@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
-    <script src="https://kit.fontawesome.com/cbb26e12b7.js" crossorigin="anonymous"></script>
-    <script src="./Public/JS/script.js"></script>
-    <script src="./Public/JS/birthday.js"></script>
+    <meta property="og:image" content="/Public/Assets/Images/screenshot.png">
+    <meta property="og:image:width" content="960">
+    <meta property="og:image:height" content="540">
+    <meta property="og:image:type" content="image/png">
+    <meta name="twitter:card" content="summary_large_image">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <div id="bg"></div>
+    <header>
+        <h1>@NotGabry</h1>
+        <p><span id="em">🍪</span>I'm a <span id="age">~</span> years old guy who likes
+            <strong>cookies</strong>
+        </p>
+        <a href="https://i.gabry.ga/discord" target="_blank">
+            <button class="btn"><i class="fa-brands fa-discord"></i></button>
+        </a>
+        <a href="https://i.gabry.ga/github" target="_blank">
+            <button class="btn"><i class="fa-brands fa-github"></i></button>
+        </a>
+        <a href="https://i.gabry.ga/spotify" target="_blank">
+            <button class="btn"><i class="fa-brands fa-spotify"></i></button>
+        </a>
+        <a href="https://i.gabry.ga/twitter" target="_blank" id="last">
+            <button class="btn"><i class="fa-brands fa-twitter"></i></button>
+        </a>
+    </header>
+</body>
+
+<script src="https://unpkg.com/twemoji@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+<script src="https://kit.fontawesome.com/cbb26e12b7.js" crossorigin="anonymous"></script>
+<script src="./Public/JS/script.js"></script>
+
 </html>
